--- a/views/userView/cart.ejs
+++ b/views/userView/cart.ejs
@@ -88,6 +88,7 @@
 
  <!-- Cart Page Section Begin -->
  <div class="cart-page">
+  <form action="/checkout" method="post">
     <div class="container">
         <div class="cart-table">
             <table>
@@ -148,7 +149,7 @@
                 <% } %>
             </table>
         </div>
-        <div class="cart-btn">
+        <!-- <div class="cart-btn">
             <div class="row">
                 <div class="col-lg-6">
                     <div class="coupon-input">
@@ -160,7 +161,7 @@
                     <div class="site-btn update-btn">Update Cart</div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     <div class="shopping-method">
         <div class="container">
@@ -189,7 +190,8 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-12 text-right">
-                                <a href="#" class="primary-btn chechout-btn">Proceed to checkout</a>
+                                <!-- <a href="#" class="primary-btn chechout-btn">Proceed to checkout</a> -->
+                                <button class="btn btn-secondary">Proceed to checkout</button>
                             </div>
                             <!-- <div>
                               <p style="color: red;">Maximum 5 products per person </p>
@@ -200,6 +202,7 @@
             </div>
         </div>
     </div>
+  </form>
 </div>
 <!-- Cart Page Section End -->
 
