--- a/views/userView/userCheckOut.ejs
+++ b/views/userView/userCheckOut.ejs
@@ -120,7 +120,7 @@
                                         <div class="tab-content">
                                             <div class="tab-pane fade in active show"
                                                 id="checkout-guest-form" role="tabpanel">
-                                                <form action="/to-payment" id="customer-form"
+                                                <form action="/toPayment" id="customer-form"
                                                     class="js-customer-form" method="post">
                                                     <div>
                                                         <!-- {{!-- <input type="hidden" name="id_customer"
@@ -129,7 +129,7 @@
                                                         <div class="form-group row">
                                                             <input class="form-control" name="firstname"
                                                                 type="text" placeholder="Full name"
-                                                                id="name">
+                                                                id="name" required>
                                                         </div>
                                                         <!-- {{!-- <div class="form-group row">
                                                             <input class="form-control" name="email"
@@ -138,30 +138,30 @@
                                                         <div class="form-group row">
                                                             <input class="form-control" name="phone"
                                                                 type="number" placeholder="Phone"
-                                                                id="phone">
+                                                                id="phone" required>
                                                         </div>
                                                         <div class="form-group row">
                                                             <input class="form-control" name="housename"
                                                                 type="text" placeholder="House Name"
-                                                                id="house">
+                                                                id="house" required>
                                                         </div>
                                                         <div class="form-group row">
                                                             <input class="form-control" name="city"
-                                                                type="text" placeholder="City" id="city">
+                                                                type="text" placeholder="City" id="city" required>
                                                         </div>
                                                         <div class="form-group row">
                                                             <input class="form-control" name="state"
-                                                                type="text" placeholder="State" id="state">
+                                                                type="text" placeholder="State" id="state" required>
                                                         </div>
                                                         <div class="form-group row">
                                                             <input class="form-control" name="pincode"
                                                                 type="number" placeholder="Pincode"
-                                                                id="pincode">
+                                                                id="pincode" required>
                                                         </div>
                                                         <div class="form-group row">
                                                             <input class="form-control" name="country"
                                                                 type="text" placeholder="Country"
-                                                                id="country">
+                                                                id="country" required>
                                                         </div>
                                                         <!-- {{!-- <div class="form-check">
                                                             <input class="form-check-input" type="radio"
