--- a/views/adminView/adminProductAdd.ejs
+++ b/views/adminView/adminProductAdd.ejs
@@ -38,12 +38,14 @@
 <!-- <h2 class="mb-4">Add Product</h2> -->
 <form action="/admin/product" method="post" enctype="multipart/form-data">
 <div class="form-group">
+  <span id="name-error"></span>
   <label for="productName" style="color:rgb(0, 0, 0); font-size: medium;">Product Name:</label>
-  <input type="text" class="form-control" id="productName" placeholder="Product name" name="prodName" minlength="4" required>
+  <input type="text" class="form-control" id="productName" placeholder="Product name" onkeyup="validateName()" name="prodName" minlength="4" required>
 </div>
 <div class="form-group" style="padding-top: 3%;">
+  <span id="disc_error"></span>
   <label for="productDescription" style="color:rgb(0, 0, 0); font-size: medium;">Product Description:</label>
-  <textarea class="form-control" id="productDescription" rows="3" placeholder="Product description" name="prodDesc" minlength="10" maxlength="100" required></textarea>
+  <textarea class="form-control" id="productDescription" rows="3" placeholder="Product description" onkeyup="validateDiscription()" name="prodDesc" minlength="10" maxlength="100" required></textarea>
 </div>
 <div class="form-group" style="padding-top: 3%;">
   <label for="productPrice" style="color:rgb(0, 0, 0); font-size: medium;">Product Price:</label>
@@ -134,4 +136,36 @@ document.getElementById('productImage').addEventListener('change', function(even
   }
 });
 </script>
+<!-- <script>
+ var name_error = document.getElementById('name-error');
+ var disc_error = document.getElementById('disc_error');
+
+
+
+            function validateName()
+            {
+                var name = document.getElementById('productName').value;
+                if(name.length ==0)
+                {
+                  name_error.innerHTML ='<p class="help-block text-danger">product name is required</p>';
+                    return false;
+                }
+                return true;
+            }
+
+ 
+            function validateDiscription()
+            {
+                var disc = document.getElementById('productDescription').value;
+                if(disc.length == 0)
+                {
+                  disc_error.innerHTML ='<p class="help-block text-danger">product discription is required</p>';
+                    return false;
+                }
+                return true;
+            }
+ 
+
+  
+</script> -->
   <%- include ('adminFooter') %>
