--- a/views/userView/userOrderSiglePage.ejs
+++ b/views/userView/userOrderSiglePage.ejs
@@ -79,7 +79,7 @@
                                 <li class="list-group-item">Quantity: <%= data[0].quentity %> | Price: <%= data[0].price %></li>
                             </ul>
                             <h5 class="mt-4">Total Price: <%= data[0].price %></h5>
-                            <h5 class="mt-4">Amount Paid: <%= data[0].amountPaid %></h5>
+                            <h5 class="mt-4">Amount Paid:₹ <%= data[0].amountPaid %></h5>
                         </div>
                         
                     </div>
